examples/type_system/failing/68_adt_nested_list_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E083: nested list pattern set must cover empty and non-empty branches.

data WrapList {
    Boxed(List<Int>),
    Empty,
}

fn size_hint(w: WrapList) -> Int {
    match w {
        Boxed([]) -> 0,
        Empty -> 0,
    }
}

fn main() {
    size_hint(Empty)
}
